[gd_scene load_steps=3 format=3 uid="uid://dtvmrv6i7wp0a"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_c5xbx"]
[ext_resource type="PackedScene" uid="uid://b3ccax4o615ss" path="res://scenes/level.tscn" id="2_f8o80"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c5xbx")
level = ExtResource("2_f8o80")

[node name="MainScreen" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0768358, 0.0768358, 0.0768358, 1)

[node name="Label" type="Label" parent="MainScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -333.5
offset_top = 79.0
offset_right = 333.5
offset_bottom = 192.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 82
text = "‚òÑÔ∏èCartespaceüöÄ"

[node name="VBoxContainer" type="VBoxContainer" parent="MainScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -57.0
offset_top = -313.0
offset_right = 57.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="Play" type="Button" parent="MainScreen/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Play"

[node name="Credit" type="Button" parent="MainScreen/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Credit"

[node name="Exit" type="Button" parent="MainScreen/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Exit"

[node name="CreditScreen" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0768358, 0.0768358, 0.0768358, 1)

[node name="Label" type="Label" parent="CreditScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 31
text = "Kenney Assets - Particle Pack (2D)
Kenney Assets - Planets (2D)"

[node name="Back" type="Button" parent="CreditScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = 153.0
offset_right = 22.5
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Back"

[connection signal="pressed" from="MainScreen/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/Credit" to="." method="_on_credit_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CreditScreen/Back" to="." method="_on_back_pressed"]
